Fix spacing on logo and title bar

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -52,7 +52,6 @@ i {
 }
 
 .navbar-brand {
-    padding-left: 15px;
     margin: 0;
 }
 
@@ -400,6 +399,9 @@ footer {
 @media (min-width: 992px) {
     .centre-logo {
         width: 150px;
+    }
+    .navbar-brand {
+        padding-left: 15px;
     }
     .hero-tagline {
         padding-top: 10px;
